--- a/gpt_killer_imple.html
+++ b/gpt_killer_imple.html
@@ -192,7 +192,7 @@
       <div>
         <div class="title">GPT Killer <span style="font-size:13px;color:#9ca3af;">· 한국어 텍스트 탐지 데모</span></div>
         <div class="subtitle">
-          상단 박스에 텍스트를 붙여넣고 <b>“분석하기”</b>를 누르면, 통계적 패턴을 기반으로 AI·학생 작성 가능성을 점수로 보여줍니다.
+          상단 박스에 텍스트를 붙여넣고 <b>“분석하기”</b>를 누르면, 통계적 패턴을 기반으로 AI 작성 가능성을 점수로 보여줍니다.
         </div>
       </div>
     </div>
@@ -504,4 +504,5 @@
     });
   </script>
 </body>
+
 </html>
